Merge stderr to stdin